# arc

./: Cargo.toml  README.md
examples/: calculator.rs  fibonacci.rs  hello_world.rs  layout.rs  playground.rs  stopwatch.rs
src/: application.rs  builder.rs  color.rs  context.rs  event.rs  events.rs  font.rs  geometry.rs  layout.rs  lib.rs  node.rs  text.rs  view.rs  window.rs
src/macos/: app.rs  column.rs  mod.rs  object.rs  row.rs  solid_color.rs  solid_color_builder.rs  text.rs  view.rs  view_box.rs  view_builder.rs  view_group.rs  window.rs
src/os/: mod.rs  nodes.rs
src/os/macos/: application.rs  context.rs  font.rs  mod.rs  node.rs  text.rs  view.rs  window.rs
src/os/macos/sys/: color.rs  mod.rs  text.rs  view.rs
