[package]
name = "arc"
version = "0.1.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = ""

[package.metadata.bundle.example.layout]
name = "Layout"
identifier = "io.mehcode.arc.example.layout"

[package.metadata.bundle.example.calculator]
name = "Calculator"
identifier = "io.mehcode.arc.example.calculator"

[dependencies]
lazy_static = "1"
yoga = "0.2"
fnv = "1.0.3"
parking_lot = "0.6"
downcast = "0.9.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
dispatch = "0.1"
core-foundation = { git = "https://github.com/mehcode/core-foundation-rs" }
core-foundation-sys = { git = "https://github.com/mehcode/core-foundation-rs" }
core-graphics = { git = "https://github.com/mehcode/core-foundation-rs" }
core-text = { git = "https://github.com/mehcode/core-foundation-rs" }
cocoa = { git = "https://github.com/mehcode/core-foundation-rs" }
foreign-types-shared = "0.1"

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
core-foundation = { git = "https://github.com/mehcode/core-foundation-rs" }
core-foundation-sys = { git = "https://github.com/mehcode/core-foundation-rs" }
core-graphics = { git = "https://github.com/mehcode/core-foundation-rs" }
core-text = { git = "https://github.com/mehcode/core-foundation-rs" }
cocoa = { git = "https://github.com/mehcode/core-foundation-rs" }
