cargo-features = ["edition"]

[package]
name = "arc"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
description = ""

[dependencies]
lazy_static = "1"
yoga = "0.2"
fnv = "1.0.3"
parking_lot = "0.6"
downcast = "0.9.2"
bitflags = "1.0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
dispatch = "0.1"
core-foundation = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
core-foundation-sys = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
core-graphics = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
core-text = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
cocoa = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
foreign-types-shared = "0.1"

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
core-foundation = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
core-foundation-sys = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
core-graphics = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
core-text = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
cocoa = { git = "https://github.com/mehcode/core-foundation-rs", rev = "3592afbd1aa81dca2951757b1d3d7a17582fe356" }
